# kpl

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  shutdown.rs  tracing.rs  types.rs
src/dev/: mod.rs  pods.rs
src/kube/: client.rs
src/merge/: format.rs  mod.rs  output.rs
src/podwatch/: watcher.rs
src/stream/: dev.rs  kube.rs  mod.rs  supervisor.rs
tests/: dev_smoke.rs
