[package]
name = "kube-podlog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fast multi-pod Kubernetes log tailer (kubectl logs -f, but better)"
repository = "https://github.com/your-org/kube-podlog"
readme = "README.md"
rust-version = "1.78"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "io-util", "time"] }
tokio-util = "0.7"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

# Errors
thiserror = "2.0"

# Time + formatting (RFC3339)
time = { version = "0.3", features = ["formatting", "macros", "serde"] }

# JSON output mode
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Kube client + watcher runtime
kube = { version = "0.91", features = ["client", "runtime", "derive", "rustls-tls"] }
kube-runtime = "0.91"
k8s-openapi = { version = "0.22", features = ["v1_29"] }

# Streams
futures = "0.3"

# Colours
anstyle = "1"

bytes = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
